# semindex

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  semind.cpp
.github/workflows/: cmake-single-platform.yml
Documentation/: api.md  building.md  callgraph.md  command-database.md  contribution.md  database-api.md  index-database.md  lsp.md  output-formats.md  performance.md
include/: semind.h  semindex.h  semindex_database.h
scripts/: analyze-trace.py  analyze-trace.sh  benchmark.py  benchmark.sh
src/: index_ast.cpp  index_context.cpp  index_pp.cpp  index_pp.h  lsp_call_hierarchy.cpp  lsp_call_hierarchy.h  lsp_indexer.cpp  lsp_indexer.h  lsp_overlay.cpp  lsp_overlay.h  lsp_server.cpp  lsp_server.h  lsp_source.cpp  lsp_source.h  lsp_transport.cpp  lsp_transport.h  semind.cpp  semindex.cpp  semindex_internal.h
tests/: callgraph-a.c  callgraph-b.c  callgraph.callees.expect  callgraph.callers.expect  compile_commands.json.in  compiler-target.c  database-api.c  partial-index.cpp  run-callgraph-tests.sh  run-command-db-tests.sh  run-compiler-tests.sh  run-database-api-tests.sh  run-database-tests.sh  run-lsp-tests.py  run-output-tests.sh  run-scope-tests.sh  run-search-tests.sh  run-trace-tests.sh  test.c  test.c.dissect.expect  test.c.expect  test.c.json.expect  test1.c  test1.c.dissect.expect  test1.c.expect  test1.c.json.expect  test10.c  test10.c.dissect.expect  test10.c.expect  test10.c.json.expect  test11.c  test11.c.dissect.expect  test11.c.expect  test11.c.json.expect  test11.c.search-format.expect  test11.c.search-variant.expect  test11.c.search.expect  test12.c  test12.c.dissect.expect  test12.c.expect  (+57 more)
tests/include/: test14.h
tests/partial/: broken-delimiter.c  clean.c  local-syntax.c  missing-header.c  semantic.c
tests/scope/: api.h  use.c  use.c.file.dissect.expect  use.c.file.expect  use.c.project.dissect.expect  use.c.project.expect
utils/: cmd_callgraph.c  cmd_compile_commands.c  cmd_compiler.c  cmd_index.c  cmd_search.c  command_db.c  command_db.h  index_db.c  index_db.h  index_db_reader.c  output.h  output_common.c  output_default.c  output_dissect.c  output_json.c  output_search.c  perf_trace.c  perf_trace.h  semind.c  semindex.c  semindex_cli.h  semindex_lsp.cpp  sqlite.h
